--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>TXT 小说阅读器</title>
+  <title>TXT 小说阅读器（DOM 锚点版）</title>
   <style>
     body {
       margin: 0;
-      font-family: "-apple-system", "BlinkMacSystemFont", "Helvetica Neue", "Microsoft YaHei", sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Microsoft YaHei", sans-serif;
       display: flex;
       height: 100vh;
       overflow: hidden;
@@ -21,7 +21,6 @@
       box-sizing: border-box;
       background: #fafafa;
     }
-
     @media (max-width: 768px) {
       #sidebar {
         position: fixed;
@@ -57,162 +56,155 @@
       padding: 20px;
       line-height: 1.8;
       font-size: 18px;
-      white-space: pre-wrap;
+    }
+    h2 {
+      margin: 1.2em 0 0.6em;
+      font-size: 1.2em;
+    }
+    p {
+      margin: 0.4em 0;
     }
     .chapter {
       cursor: pointer;
       padding: 4px 0;
       font-size: 14px;
     }
-    .chapter:hover {
-      text-decoration: underline;
-    }
+    .chapter:hover { text-decoration: underline; }
     .bookmark {
       cursor: pointer;
       font-size: 13px;
       color: #555;
       padding: 2px 0;
     }
-    h3 {
-      margin: 10px 0 5px;
-      font-size: 15px;
-    }
+    h3 { margin: 10px 0 5px; font-size: 15px; }
   </style>
 </head>
 <body>
-  <div id="sidebar">
-    <input type="file" id="fileInput" accept=".txt" />
-    <h3>目录</h3>
-    <div id="toc"></div>
-    <h3>书签</h3>
-    <div id="bookmarks"></div>
+
+<div id="sidebar">
+  <input type="file" id="fileInput" accept=".txt" />
+  <h3>目录</h3>
+  <div id="toc"></div>
+  <h3>书签</h3>
+  <div id="bookmarks"></div>
+</div>
+
+<div id="main">
+  <div id="toolbar">
+    <button id="toggleMenu">☰</button>
+    字号 <input type="range" min="14" max="30" value="18" id="fontSize" />
+    行距 <input type="range" min="1.2" max="3" step="0.1" value="1.8" id="lineHeight" />
+    <button id="addBookmark">添加书签</button>
   </div>
+  <div id="reader"></div>
+</div>
 
-  <div id="main">
-    <div id="toolbar">
-      <button id="toggleMenu">☰</button>
-      字号 <input type="range" min="14" max="30" value="18" id="fontSize" />
-      行距 <input type="range" min="1.2" max="3" step="0.1" value="1.8" id="lineHeight" />
-      <button id="addBookmark">添加书签</button>
-    </div>
-    <div id="reader"></div>
-  </div>
+<script>
+  const reader = document.getElementById('reader');
+  const sidebar = document.getElementById('sidebar');
+  const toc = document.getElementById('toc');
+  const bookmarksDiv = document.getElementById('bookmarks');
+  const fileInput = document.getElementById('fileInput');
 
-  <script>
-    const reader = document.getElementById('reader');
-    const sidebar = document.getElementById('sidebar');
-    const toc = document.getElementById('toc');
-    const bookmarksDiv = document.getElementById('bookmarks');
-    const fileInput = document.getElementById('fileInput');
+  let bookKey = null;
+  let chapters = [];
 
-    let bookKey = null;
-    let chapters = [];
+  document.getElementById('toggleMenu').onclick = () => {
+    sidebar.classList.toggle('show');
+  };
 
-    /* ========== 文件读取 ========== */
-    document.getElementById('toggleMenu').onclick = () => {
-      sidebar.classList.toggle('show');
+  fileInput.addEventListener('change', () => {
+    const file = fileInput.files[0];
+    if (!file) return;
+    bookKey = 'book_' + file.name;
+
+    const fr = new FileReader();
+    fr.onload = e => {
+      renderBook(e.target.result);
+      restorePosition();
+      loadBookmarks();
+      sidebar.classList.remove('show');
     };
+    fr.readAsText(file, 'utf-8');
+  });
 
-    fileInput.addEventListener('change', () => {
-      const file = fileInput.files[0];
-      if (!file) return;
+  function renderBook(text) {
+    reader.innerHTML = '';
+    toc.innerHTML = '';
+    chapters = [];
 
-      bookKey = 'book_' + file.name;
-      const readerFile = new FileReader();
-      readerFile.onload = e => {
-        const text = e.target.result;
-        reader.textContent = text;
-        generateTOC(text);
-        restorePosition();
-        loadBookmarks();
+    const lines = text.split(/\n/);
+    lines.forEach((line, idx) => {
+      if (/^\s*(第.{1,9}[章回节]|Chapter\s+\d+)/.test(line)) {
+        const h = document.createElement('h2');
+        const id = 'ch_' + idx;
+        h.id = id;
+        h.textContent = line.trim();
+        reader.appendChild(h);
+        chapters.push({ title: line.trim(), id });
+      } else {
+        const p = document.createElement('p');
+        p.textContent = line;
+        reader.appendChild(p);
+      }
+    });
 
-        // 移动端加载后自动收起侧栏
+    chapters.forEach(ch => {
+      const div = document.createElement('div');
+      div.className = 'chapter';
+      div.textContent = ch.title;
+      div.onclick = () => {
+        document.getElementById(ch.id)
+          .scrollIntoView({ behavior: 'smooth', block: 'start' });
         sidebar.classList.remove('show');
       };
-      readerFile.readAsText(file, 'utf-8');
+      toc.appendChild(div);
     });
+  }
 
-    /* ========== 目录生成（按常见章节格式） ========== */
-    function generateTOC(text) {
-      toc.innerHTML = '';
-      chapters = [];
-      const lines = text.split(/\n/);
-      let pos = 0;
-      lines.forEach(line => {
-        if (/^\s*(第.{1,9}[章回节]|Chapter\s+\d+)/.test(line)) {
-          chapters.push({ title: line.trim(), pos });
-        }
-        pos += line.length + 1;
-      });
+  document.getElementById('fontSize').oninput = e => {
+    reader.style.fontSize = e.target.value + 'px';
+  };
+  document.getElementById('lineHeight').oninput = e => {
+    reader.style.lineHeight = e.target.value;
+  };
 
-      chapters.forEach(ch => {
-        const div = document.createElement('div');
-        div.className = 'chapter';
-        div.textContent = ch.title;
-        div.onclick = () => scrollToPos(ch.pos);
-        toc.appendChild(div);
-      });
-    }
+  reader.addEventListener('scroll', () => {
+    if (!bookKey) return;
+    localStorage.setItem(bookKey + '_scroll', reader.scrollTop);
+  });
 
-    /* ========== 滚动定位 ========== */
-    function scrollToPos(pos) {
-      // 根据字符比例近似定位，避免破坏原文 DOM
-      const total = reader.scrollHeight - reader.clientHeight;
-      const ratio = pos / reader.textContent.length;
-      reader.scrollTop = total * ratio;
+  function restorePosition() {
+    const pos = localStorage.getItem(bookKey + '_scroll');
+    if (pos) reader.scrollTop = Number(pos);
+  }
 
-      // 移动端自动收起目录
-      sidebar.classList.remove('show');
-    }
+  document.getElementById('addBookmark').onclick = () => {
+    if (!bookKey) return;
+    const mark = { pos: reader.scrollTop, time: new Date().toLocaleString() };
+    const list = getBookmarks();
+    list.push(mark);
+    localStorage.setItem(bookKey + '_marks', JSON.stringify(list));
+    loadBookmarks();
+  };
 
-    /* ========== 字体设置 ========== */
-    document.getElementById('fontSize').oninput = e => {
-      reader.style.fontSize = e.target.value + 'px';
-    };
-    document.getElementById('lineHeight').oninput = e => {
-      reader.style.lineHeight = e.target.value;
-    };
+  function getBookmarks() {
+    const raw = localStorage.getItem(bookKey + '_marks');
+    return raw ? JSON.parse(raw) : [];
+  }
 
-    /* ========== 阅读进度保存 ========== */
-    reader.addEventListener('scroll', () => {
-      if (!bookKey) return;
-      localStorage.setItem(bookKey + '_scroll', reader.scrollTop);
+  function loadBookmarks() {
+    bookmarksDiv.innerHTML = '';
+    if (!bookKey) return;
+    getBookmarks().forEach((m, i) => {
+      const div = document.createElement('div');
+      div.className = 'bookmark';
+      div.textContent = `书签 ${i + 1}（${m.time}）`;
+      div.onclick = () => reader.scrollTop = m.pos;
+      bookmarksDiv.appendChild(div);
     });
+  }
+</script>
 
-    function restorePosition() {
-      const pos = localStorage.getItem(bookKey + '_scroll');
-      if (pos) reader.scrollTop = Number(pos);
-    }
-
-    /* ========== 书签功能 ========== */
-    document.getElementById('addBookmark').onclick = () => {
-      if (!bookKey) return;
-      const mark = {
-        pos: reader.scrollTop,
-        time: new Date().toLocaleString()
-      };
-      const list = getBookmarks();
-      list.push(mark);
-      localStorage.setItem(bookKey + '_marks', JSON.stringify(list));
-      loadBookmarks();
-    };
-
-    function getBookmarks() {
-      const raw = localStorage.getItem(bookKey + '_marks');
-      return raw ? JSON.parse(raw) : [];
-    }
-
-    function loadBookmarks() {
-      bookmarksDiv.innerHTML = '';
-      if (!bookKey) return;
-      getBookmarks().forEach((m, i) => {
-        const div = document.createElement('div');
-        div.className = 'bookmark';
-        div.textContent = `书签 ${i + 1}（${m.time}）`;
-        div.onclick = () => reader.scrollTop = m.pos;
-        bookmarksDiv.appendChild(div);
-      });
-    }
-  </script>
 </body>
 </html>
