--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>TXT 小说阅读器（DOM 锚点版）</title>
+  <title>TXT 小说阅读器</title>
+
   <style>
     body {
       margin: 0;
@@ -11,8 +12,8 @@
       display: flex;
       height: 100vh;
       overflow: hidden;
-      -webkit-user-select: none;
     }
+
     #sidebar {
       width: 260px;
       border-right: 1px solid #ddd;
@@ -21,6 +22,7 @@
       box-sizing: border-box;
       background: #fafafa;
     }
+
     @media (max-width: 768px) {
       #sidebar {
         position: fixed;
@@ -31,16 +33,16 @@
         z-index: 10;
         transition: left 0.3s ease;
       }
-      #sidebar.show {
-        left: 0;
-      }
+      #sidebar.show { left: 0; }
     }
+
     #main {
       flex: 1;
       display: flex;
       flex-direction: column;
       height: 100vh;
     }
+
     #toolbar {
       padding: 8px 12px;
       border-bottom: 1px solid #ddd;
@@ -48,15 +50,23 @@
       gap: 10px;
       align-items: center;
       background: #f5f5f5;
-      flex-wrap: wrap;
+      position: sticky;
+      top: 0;
+      z-index: 5;
+      transition: transform 0.3s ease;
     }
+    #toolbar.hide {
+      transform: translateY(-100%);
+    }
+
     #reader {
       flex: 1;
       overflow-y: auto;
       padding: 20px;
-      line-height: 1.8;
       font-size: 18px;
+      line-height: 1.8;
     }
+
     h2 {
       margin: 1.2em 0 0.6em;
       font-size: 1.2em;
@@ -64,19 +74,25 @@
     p {
       margin: 0.4em 0;
     }
+
     .chapter {
       cursor: pointer;
       padding: 4px 0;
       font-size: 14px;
     }
     .chapter:hover { text-decoration: underline; }
+
     .bookmark {
       cursor: pointer;
       font-size: 13px;
       color: #555;
       padding: 2px 0;
     }
-    h3 { margin: 10px 0 5px; font-size: 15px; }
+
+    h3 {
+      margin: 10px 0 5px;
+      font-size: 15px;
+    }
   </style>
 </head>
 <body>
@@ -105,9 +121,10 @@
   const toc = document.getElementById('toc');
   const bookmarksDiv = document.getElementById('bookmarks');
   const fileInput = document.getElementById('fileInput');
+  const toolbar = document.getElementById('toolbar');
 
   let bookKey = null;
-  let chapters = [];
+  let lastScrollTop = 0;
 
   document.getElementById('toggleMenu').onclick = () => {
     sidebar.classList.toggle('show');
@@ -116,11 +133,14 @@
   fileInput.addEventListener('change', () => {
     const file = fileInput.files[0];
     if (!file) return;
-    bookKey = 'book_' + file.name;
 
+    bookKey = 'book_' + file.name;
     const fr = new FileReader();
     fr.onload = e => {
-      renderBook(e.target.result);
+      const text = e.target.result;
+      localStorage.setItem(bookKey + '_text', text);
+      localStorage.setItem('last_book', bookKey);
+      renderBook(text);
       restorePosition();
       loadBookmarks();
       sidebar.classList.remove('show');
@@ -131,34 +151,30 @@
   function renderBook(text) {
     reader.innerHTML = '';
     toc.innerHTML = '';
-    chapters = [];
 
-    const lines = text.split(/\n/);
+    const lines = text.split(/\n+/);
+    const chapterReg = /^\s*(第\s*[零一二三四五六七八九十百千万0-9]{1,9}\s*[章回节卷]|CHAPTER\s+\d+|Chapter\s+\d+)/;
+
     lines.forEach((line, idx) => {
-      if (/^\s*(第.{1,9}[章回节]|Chapter\s+\d+)/.test(line)) {
+      if (chapterReg.test(line)) {
         const h = document.createElement('h2');
-        const id = 'ch_' + idx;
-        h.id = id;
+        h.id = 'ch_' + idx;
         h.textContent = line.trim();
         reader.appendChild(h);
-        chapters.push({ title: line.trim(), id });
+
+        const tocItem = document.createElement('div');
+        tocItem.className = 'chapter';
+        tocItem.textContent = line.trim();
+        tocItem.onclick = () => {
+          h.scrollIntoView({ behavior: 'smooth' });
+          sidebar.classList.remove('show');
+        };
+        toc.appendChild(tocItem);
       } else {
         const p = document.createElement('p');
         p.textContent = line;
         reader.appendChild(p);
       }
-    });
-
-    chapters.forEach(ch => {
-      const div = document.createElement('div');
-      div.className = 'chapter';
-      div.textContent = ch.title;
-      div.onclick = () => {
-        document.getElementById(ch.id)
-          .scrollIntoView({ behavior: 'smooth', block: 'start' });
-        sidebar.classList.remove('show');
-      };
-      toc.appendChild(div);
     });
   }
 
@@ -172,6 +188,13 @@
   reader.addEventListener('scroll', () => {
     if (!bookKey) return;
     localStorage.setItem(bookKey + '_scroll', reader.scrollTop);
+
+    if (reader.scrollTop > lastScrollTop + 10) {
+      toolbar.classList.add('hide');
+    } else if (reader.scrollTop < lastScrollTop - 10) {
+      toolbar.classList.remove('hide');
+    }
+    lastScrollTop = reader.scrollTop;
   });
 
   function restorePosition() {
@@ -204,6 +227,17 @@
       bookmarksDiv.appendChild(div);
     });
   }
+
+  window.addEventListener('load', () => {
+    const lastBook = localStorage.getItem('last_book');
+    if (!lastBook) return;
+    const text = localStorage.getItem(lastBook + '_text');
+    if (!text) return;
+    bookKey = lastBook;
+    renderBook(text);
+    restorePosition();
+    loadBookmarks();
+  });
 </script>
 
 </body>
