--- a/index.html
+++ b/index.html
@@ -1,106 +1,95 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>TXT 小说阅读器</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+<title>TXT 小说阅读器（书架版）</title>
 
-  <style>
-    body {
-      margin: 0;
-      font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Microsoft YaHei", sans-serif;
-      display: flex;
-      height: 100vh;
-      overflow: hidden;
-    }
+<style>
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Microsoft YaHei", sans-serif;
+  height: 100vh;
+  display: flex;
+  overflow: hidden;
+}
 
-    #sidebar {
-      width: 260px;
-      border-right: 1px solid #ddd;
-      overflow-y: auto;
-      padding: 10px;
-      box-sizing: border-box;
-      background: #fafafa;
-    }
+#sidebar {
+  width: 280px;
+  background: #fafafa;
+  border-right: 1px solid #ddd;
+  padding: 10px;
+  box-sizing: border-box;
+  overflow-y: auto;
+}
 
-    @media (max-width: 768px) {
-      #sidebar {
-        position: fixed;
-        left: -100%;
-        top: 0;
-        height: 100vh;
-        width: 80%;
-        z-index: 10;
-        transition: left 0.3s ease;
-      }
-      #sidebar.show { left: 0; }
-    }
+@media (max-width: 768px) {
+  #sidebar {
+    position: fixed;
+    left: -100%;
+    top: 0;
+    height: 100vh;
+    width: 80%;
+    z-index: 10;
+    transition: left .3s;
+  }
+  #sidebar.show { left: 0; }
+}
 
-    #main {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      height: 100vh;
-    }
+#main {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
 
-    #toolbar {
-      padding: 8px 12px;
-      border-bottom: 1px solid #ddd;
-      display: flex;
-      gap: 10px;
-      align-items: center;
-      background: #f5f5f5;
-      position: sticky;
-      top: 0;
-      z-index: 5;
-      transition: transform 0.3s ease;
-    }
-    #toolbar.hide {
-      transform: translateY(-100%);
-    }
+#toolbar {
+  display: flex;
+  gap: 10px;
+  padding: 8px;
+  border-bottom: 1px solid #ddd;
+  background: #f5f5f5;
+  position: sticky;
+  top: 0;
+  z-index: 5;
+  transition: transform .3s;
+}
+#toolbar.hide {
+  transform: translateY(-100%);
+}
 
-    #reader {
-      flex: 1;
-      overflow-y: auto;
-      padding: 20px;
-      font-size: 18px;
-      line-height: 1.8;
-    }
+#reader {
+  flex: 1;
+  overflow-y: auto;
+  padding: 20px;
+  font-size: 18px;
+  line-height: 1.8;
+}
 
-    h2 {
-      margin: 1.2em 0 0.6em;
-      font-size: 1.2em;
-    }
-    p {
-      margin: 0.4em 0;
-    }
+h2 {
+  margin: 1.2em 0 .6em;
+}
 
-    .chapter {
-      cursor: pointer;
-      padding: 4px 0;
-      font-size: 14px;
-    }
-    .chapter:hover { text-decoration: underline; }
-
-    .bookmark {
-      cursor: pointer;
-      font-size: 13px;
-      color: #555;
-      padding: 2px 0;
-    }
-
-    h3 {
-      margin: 10px 0 5px;
-      font-size: 15px;
-    }
-  </style>
+.book, .chapter, .bookmark {
+  cursor: pointer;
+  padding: 4px 0;
+  font-size: 14px;
+}
+.book:hover, .chapter:hover, .bookmark:hover {
+  text-decoration: underline;
+}
+</style>
 </head>
+
 <body>
 
 <div id="sidebar">
-  <input type="file" id="fileInput" accept=".txt" />
+  <h3>书架</h3>
+  <input type="file" id="fileInput" accept=".txt">
+  <div id="bookshelf"></div>
+
   <h3>目录</h3>
   <div id="toc"></div>
+
   <h3>书签</h3>
   <div id="bookmarks"></div>
 </div>
@@ -108,136 +97,133 @@
 <div id="main">
   <div id="toolbar">
     <button id="toggleMenu">☰</button>
-    字号 <input type="range" min="14" max="30" value="18" id="fontSize" />
-    行距 <input type="range" min="1.2" max="3" step="0.1" value="1.8" id="lineHeight" />
-    <button id="addBookmark">添加书签</button>
+    字号 <input type="range" id="fontSize" min="14" max="30" value="18">
+    行距 <input type="range" id="lineHeight" min="1.2" max="3" step="0.1" value="1.8">
+    <button id="addBookmark">书签</button>
   </div>
   <div id="reader"></div>
 </div>
 
 <script>
-  const reader = document.getElementById('reader');
-  const sidebar = document.getElementById('sidebar');
-  const toc = document.getElementById('toc');
-  const bookmarksDiv = document.getElementById('bookmarks');
-  const fileInput = document.getElementById('fileInput');
-  const toolbar = document.getElementById('toolbar');
+const reader = document.getElementById('reader');
+const toc = document.getElementById('toc');
+const bookshelf = document.getElementById('bookshelf');
+const bookmarksDiv = document.getElementById('bookmarks');
+const sidebar = document.getElementById('sidebar');
+const toolbar = document.getElementById('toolbar');
 
-  let bookKey = null;
-  let lastScrollTop = 0;
+let currentBook = null;
+let lastScroll = 0;
 
-  document.getElementById('toggleMenu').onclick = () => {
-    sidebar.classList.toggle('show');
-  };
-
-  fileInput.addEventListener('change', () => {
-    const file = fileInput.files[0];
-    if (!file) return;
-
-    bookKey = 'book_' + file.name;
-    const fr = new FileReader();
-    fr.onload = e => {
-      const text = e.target.result;
-      localStorage.setItem(bookKey + '_text', text);
-      localStorage.setItem('last_book', bookKey);
-      renderBook(text);
-      restorePosition();
-      loadBookmarks();
-      sidebar.classList.remove('show');
-    };
-    fr.readAsText(file, 'utf-8');
+/* ===== 书架 ===== */
+function loadShelf() {
+  bookshelf.innerHTML = '';
+  const list = JSON.parse(localStorage.getItem('bookshelf') || '[]');
+  list.forEach(b => {
+    const div = document.createElement('div');
+    div.className = 'book';
+    div.textContent = b.name;
+    div.onclick = () => openBook(b.id);
+    bookshelf.appendChild(div);
   });
+}
 
-  function renderBook(text) {
-    reader.innerHTML = '';
-    toc.innerHTML = '';
+function saveBook(name, text) {
+  const id = 'book_' + Date.now();
+  const list = JSON.parse(localStorage.getItem('bookshelf') || '[]');
+  list.push({ id, name });
+  localStorage.setItem('bookshelf', JSON.stringify(list));
+  localStorage.setItem(id + '_text', text);
+  openBook(id);
+}
 
-    const lines = text.split(/\n+/);
-    const chapterReg = /^\s*(第\s*[零一二三四五六七八九十百千万0-9]{1,9}\s*[章回节卷]|CHAPTER\s+\d+|Chapter\s+\d+)/;
+/* ===== 打开书 ===== */
+function openBook(id) {
+  currentBook = id;
+  const text = localStorage.getItem(id + '_text');
+  render(text);
+  restoreProgress();
+  loadBookmarks();
+  sidebar.classList.remove('show');
+}
 
-    lines.forEach((line, idx) => {
-      if (chapterReg.test(line)) {
-        const h = document.createElement('h2');
-        h.id = 'ch_' + idx;
-        h.textContent = line.trim();
-        reader.appendChild(h);
+/* ===== 渲染正文 + 目录 ===== */
+function render(text) {
+  reader.innerHTML = '';
+  toc.innerHTML = '';
 
-        const tocItem = document.createElement('div');
-        tocItem.className = 'chapter';
-        tocItem.textContent = line.trim();
-        tocItem.onclick = () => {
-          h.scrollIntoView({ behavior: 'smooth' });
-          sidebar.classList.remove('show');
-        };
-        toc.appendChild(tocItem);
-      } else {
-        const p = document.createElement('p');
-        p.textContent = line;
-        reader.appendChild(p);
-      }
-    });
-  }
+  const lines = text.split(/\n+/);
+  const reg = /^\s*(第\s*[零一二三四五六七八九十百千万0-9]+\s*[章回节]|Chapter\s+\d+)/i;
 
-  document.getElementById('fontSize').oninput = e => {
-    reader.style.fontSize = e.target.value + 'px';
-  };
-  document.getElementById('lineHeight').oninput = e => {
-    reader.style.lineHeight = e.target.value;
-  };
+  lines.forEach((l, i) => {
+    if (reg.test(l)) {
+      const h = document.createElement('h2');
+      h.id = 'c_' + i;
+      h.textContent = l.trim();
+      reader.appendChild(h);
 
-  reader.addEventListener('scroll', () => {
-    if (!bookKey) return;
-    localStorage.setItem(bookKey + '_scroll', reader.scrollTop);
-
-    if (reader.scrollTop > lastScrollTop + 10) {
-      toolbar.classList.add('hide');
-    } else if (reader.scrollTop < lastScrollTop - 10) {
-      toolbar.classList.remove('hide');
+      const t = document.createElement('div');
+      t.className = 'chapter';
+      t.textContent = l.trim();
+      t.onclick = () => h.scrollIntoView({ behavior: 'smooth' });
+      toc.appendChild(t);
+    } else {
+      const p = document.createElement('p');
+      p.textContent = l;
+      reader.appendChild(p);
     }
-    lastScrollTop = reader.scrollTop;
   });
+}
 
-  function restorePosition() {
-    const pos = localStorage.getItem(bookKey + '_scroll');
-    if (pos) reader.scrollTop = Number(pos);
-  }
+/* ===== 进度 & 工具栏 ===== */
+reader.addEventListener('scroll', () => {
+  if (!currentBook) return;
+  localStorage.setItem(currentBook + '_scroll', reader.scrollTop);
 
-  document.getElementById('addBookmark').onclick = () => {
-    if (!bookKey) return;
-    const mark = { pos: reader.scrollTop, time: new Date().toLocaleString() };
-    const list = getBookmarks();
-    list.push(mark);
-    localStorage.setItem(bookKey + '_marks', JSON.stringify(list));
-    loadBookmarks();
-  };
+  if (reader.scrollTop > lastScroll + 10) toolbar.classList.add('hide');
+  if (reader.scrollTop < lastScroll - 10) toolbar.classList.remove('hide');
+  lastScroll = reader.scrollTop;
+});
 
-  function getBookmarks() {
-    const raw = localStorage.getItem(bookKey + '_marks');
-    return raw ? JSON.parse(raw) : [];
-  }
+function restoreProgress() {
+  const p = localStorage.getItem(currentBook + '_scroll');
+  if (p) reader.scrollTop = +p;
+}
 
-  function loadBookmarks() {
-    bookmarksDiv.innerHTML = '';
-    if (!bookKey) return;
-    getBookmarks().forEach((m, i) => {
-      const div = document.createElement('div');
-      div.className = 'bookmark';
-      div.textContent = `书签 ${i + 1}（${m.time}）`;
-      div.onclick = () => reader.scrollTop = m.pos;
-      bookmarksDiv.appendChild(div);
-    });
-  }
+/* ===== 书签 ===== */
+addBookmark.onclick = () => {
+  if (!currentBook) return;
+  const list = JSON.parse(localStorage.getItem(currentBook + '_marks') || '[]');
+  list.push({ pos: reader.scrollTop, time: new Date().toLocaleString() });
+  localStorage.setItem(currentBook + '_marks', JSON.stringify(list));
+  loadBookmarks();
+};
 
-  window.addEventListener('load', () => {
-    const lastBook = localStorage.getItem('last_book');
-    if (!lastBook) return;
-    const text = localStorage.getItem(lastBook + '_text');
-    if (!text) return;
-    bookKey = lastBook;
-    renderBook(text);
-    restorePosition();
-    loadBookmarks();
+function loadBookmarks() {
+  bookmarksDiv.innerHTML = '';
+  const list = JSON.parse(localStorage.getItem(currentBook + '_marks') || '[]');
+  list.forEach(m => {
+    const d = document.createElement('div');
+    d.className = 'bookmark';
+    d.textContent = m.time;
+    d.onclick = () => reader.scrollTop = m.pos;
+    bookmarksDiv.appendChild(d);
   });
+}
+
+/* ===== 控件 ===== */
+fontSize.oninput = e => reader.style.fontSize = e.target.value + 'px';
+lineHeight.oninput = e => reader.style.lineHeight = e.target.value;
+toggleMenu.onclick = () => sidebar.classList.toggle('show');
+
+fileInput.onchange = e => {
+  const file = e.target.files[0];
+  const fr = new FileReader();
+  fr.onload = () => saveBook(file.name, fr.result);
+  fr.readAsText(file, 'utf-8');
+};
+
+window.onload = loadShelf;
 </script>
 
 </body>
